--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 DJANGO_SETTINGS_MODULE = tasks.settings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
+log_cli = 1
+log_cli_level = INFO
+log_cli_format = %(asctime)s %(levelname)s %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
